--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title></title>
   </head>
   <body>
-    <script type="text/javascript">
+    <script src="js/app.js">
 
     </script>
   </body>
